Use updated interest rect when layer needs repainting.

This ensures that repaints don't use a larger rect than necessary, while also ensuring that a new interest rect that is contained within the previous interest rect doesn't cause a repaint on its own.

Currently, the previous interest rect is used if it didn't change too much even when the layer needs repainting, as introduced in https://codereview.chromium.org/1441973003. The original rationale behind this behavior was to ensure consistency between blink and cc. With cc refactorings, this should not be an issue any longer.

BUG=646410
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2332273003
Cr-Commit-Position: refs/heads/master@{#418291}

Former-commit-id: 2a7731726042f2668cc5af06f106a616620f11e9